tui/tests/snapshots/entry__redb_prompt.snap
---
source: tui/tests/entry.rs
assertion_line: 77
expression: text
snapshot_kind: text
---
 Glues - TUI note-taking app offering complete data control and flexible storage options               [?] Show keymap 
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                           ████   ███                                                                   
                                          ██  ██   ██                                                                   
                                         ██        ██    ██  ██   ████    █████                                         
                                         ██        ██    ██  ██  ██  ██  ██                                             
                              ┌──────────────────────────Prompt───────────────────────────┐                             
                              │                                                           │                             
                              │  Provide the redb database path:                          │                             
                              │  Glues will create or reuse the single-file redb          │                             
                              │  ┌─────────────────────────────────────────────────────┐  │                             
                              │  │                                                     │  │                             
                              │  └─────────────────────────────────────────────────────┘  │                             
                              │                                                           │                             
                              │  [Enter] Submit                                           │                             
                              │  [Esc] Cancel                                             │                             
                              │                                                           │                             
                              └───────────────────────────────────────────────────────────┘                             
                                         │   [p] Proxy                        │                                         
                                         │   [h] Help                         │                                         
                                         │   [t] Theme                        │                                         
                                         │   [q] Quit                         │                                         
                                         │                                    │                                         
                                         └────────────────────────────────────┘
