tui/tests/snapshots/entry__theme_dialog_open.snap
---
source: tui/tests/entry.rs
assertion_line: 103
expression: text
snapshot_kind: text
---
 Glues - TUI note-taking app offering complete data control and flexible storage options               [?] Show keymap 
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                           ████   ███                                                                   
                                          ██  ██   ██                                                                   
                                         ██        ██    ██  ██   ████    █████                                         
                                         ██        ██    ██  ██  ██  ██  ██                                             
                                         █┌───────────Select Theme───────────┐                                          
                                          │                                  │█                                         
                                          │   [d] Dark                       │                                          
                                          │   [l] Light                      │                                          
                                          │   [p] Pastel                     │                                          
                                         ┌│   [s] Sunrise                    │┐                                         
                                         ││   [m] Midnight                   ││                                         
                                         ││   [f] Forest                     ││                                         
                                         ││                                  ││                                         
                                         ││    [Enter] Apply  [Esc] Cancel   ││                                         
                                         ││                                  ││                                         
                                         │└──────────────────────────────────┘│                                         
                                         │   [p] Proxy                        │                                         
                                         │   [h] Help                         │                                         
                                         │   [t] Theme                        │                                         
                                         │                                    │                                         
                                         └────────────────────────────────────┘
